--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -8,8 +8,9 @@
 
     <TextView
         android:id="@+id/codigoTextView"
-        android:layout_width="254dp"
-        android:layout_height="22dp"
+        android:layout_width="229dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="16dp"
         android:text="Código"
         app:layout_constraintBottom_toTopOf="@+id/nombreTextView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,21 +22,24 @@
 
     <TextView
         android:id="@+id/nombreTextView"
-        android:layout_width="206dp"
-        android:layout_height="18dp"
+        android:layout_width="190dp"
+        android:layout_height="19dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
         android:text="Nombre"
         app:layout_constraintBottom_toTopOf="@+id/descripcionTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintHorizontal_bias="0.57"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/codigoTextView" />
 
-    <TextView
+    <ImageView
         android:id="@+id/descripcionTextView"
-        android:layout_width="334dp"
-        android:layout_height="26dp"
+        android:layout_width="388dp"
+        android:layout_height="151dp"
+        android:layout_marginTop="16dp"
+        android:scaleType="fitCenter"
         android:text="Descripción"
         app:layout_constraintBottom_toTopOf="@+id/precioTextView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,8 +49,10 @@
 
     <TextView
         android:id="@+id/precioTextView"
-        android:layout_width="282dp"
-        android:layout_height="wrap_content"
+        android:layout_width="230dp"
+        android:layout_height="18dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="24dp"
         android:text="Precio"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
