--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -8,10 +8,12 @@
 
     <TextView
         android:id="@+id/codigoTextView"
-        android:layout_width="229dp"
-        android:layout_height="25dp"
+        android:layout_width="208dp"
+        android:layout_height="26dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="sans-serif-light"
         android:text="Código"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/nombreTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -22,15 +24,17 @@
 
     <TextView
         android:id="@+id/nombreTextView"
-        android:layout_width="190dp"
-        android:layout_height="19dp"
+        android:layout_width="253dp"
+        android:layout_height="27dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
+        android:fontFamily="@font/poppins_light"
         android:text="Nombre"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/descripcionTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.57"
+        app:layout_constraintHorizontal_bias="0.63"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/codigoTextView" />
 
@@ -50,10 +54,12 @@
     <TextView
         android:id="@+id/precioTextView"
         android:layout_width="230dp"
-        android:layout_height="18dp"
+        android:layout_height="28dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="24dp"
+        android:fontFamily="@font/poppins_light"
         android:text="Precio"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
